--- a/api/appsettings.json
+++ b/api/appsettings.json
@@ -4,6 +4,13 @@
     "BookstoreConnection":
     "host=localhost;port=5432;database=bookstore;username=fisher_user;password=12345;pooling=true"
   },
+  "JWTConfiguration": {
+    "Issuer": "Issuer",
+    "Audience": "Audience",
+    "Key": "type in any text, even this text if you like",
+    "TokenExpirationDays": 7
+
+  },
   "Logging": {
     "IncludeScopes": false,
     "Debug": {
